# rust_auto_tools

./: .gitignore  LICENSE  README.md  README_aut_capture.md  cargo.toml
dat_json/: Cargo.toml
dat_json/src/: main.rs  package_json.rs
db-gernerator/: .env  Cargo.toml  db-gernerator.code-workspace  table_names.txt
db-gernerator/.cargo/: config  config.toml
db-gernerator/conf/: rbatis copy.yml  rbatis.yml
db-gernerator/sqlx-sqlhelper/: Cargo.toml
db-gernerator/sqlx-sqlhelper/app-run/: Cargo.toml
db-gernerator/src/: config.rs  db.rs  dynamic.rs  main.rs  permission.rs  schema.rs  utils.rs  yaml_helper.rs
db-gernerator/src/codegen/: codegen.rs  codegen_entity.rs  codegen_entity_param.rs  codegen_handler.rs  codegen_query.rs  codegen_relation.rs  codegen_yaml.rs  mod.rs
db-gernerator/src/tmpl/: cargo_tmpl.rs  main_tmpl.rs
demos_json/: 1.json  3.json  demo.json
j2s/: .gitignore  Cargo.toml  README.md
j2s/src/: error.rs  l.txt  main.rs  rust.rs  utils.rs
json/: configs.json  deptTree.json  depts.json  dicts.json  list_cache.json  list_login_log.json  list_oper_log.json  list_user.json  menus.json  notices.json  profile.json  roles.json  service_monitor.json  sys.user.initPassword.json  sys_normal_disable.json  sys_notice_status.json  sys_user_sex.json  sys_yes_no.json  user.json  user_info.json
json/cms/: Sessions.json  Sessions1.json
json/system/dict/data/type/: sys_show_hide.json
json_typegen/json_typegen_shared/src/generation/: rust.rs
rust-generator/: README.md
rust-generator/conf/: rbatis.yml
rust-generator/src/codegen/: codegen.rs  codegen_entity.rs  codegen_handler.rs
sql_reverse/: .gitignore  mysql_default.json  postgres_default.json  readme.2.MD  reverse.sh  reverse.yml  reverse_mysql.yml
sql_reverse/sql_reverse/: Cargo.toml  README.md  build.rs
sql_reverse/sql_reverse/src/: app_arguments.rs  main.rs
sql_reverse/sql_reverse_error/: Cargo.toml
sql_reverse/sql_reverse_struct/: Cargo.toml
sql_reverse/sql_reverse_struct/src/: common.rs  mysql_struct.rs  postgres_struct.rs
sql_reverse/sql_reverse_template/: Cargo.toml
sql_reverse/sql_reverse_template/src/: render.rs  table.rs
sql_reverse/templates/: r.tera  r_vo.tera  rbatis.tera  sea-orm-core.tera  sea-orm-handler.tera  sqlx copy 2.tera  sqlx copy 3.tera  sqlx_handlers.tera  sqlx_models.tera  sqlx_row.tera
