[package]
name = "j2s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name ="daemon"
path ="src/main.rs"

[[bin]]
name ="j2s"
path ="src/main.rs"

[dependencies]
 
serde = { version = "1", features = ["derive",] }
quicli = "*"
walkdir = "2"
anyhow="*"
env="*" 
typed-builder="*" 
serde_json = { version = "1", features = ["preserve_order", "std"] }
serde_derive="*"
thiserror = "1"

validator = { version = "0.16", features = ["derive"], optional = true }
cfg-if = "1"
doc-comment = "0.3"
indexmap = { version = "1", features = ["serde-1"] }
lazy_static = "1"
json_typegen = "0.7"
nom="*"

[dependencies.json_typegen_shared]
path = "../json_typegen/json_typegen_shared"
version = "0.7"
features = ["progress"]