[package]
name = "db-gernerator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
# lazy_static = "*"
# sqlx = {version = "0.6", features = ["runtime-tokio-rustls", "mysql", "chrono", "decimal"]}
#rbatis orm dep must use async-std(Because actix-web relies on tokio0.2)
## tokio = { version = "1", features = ["full"] }
tokio = {version = "1.10", features = ["full", "rt-multi-thread"] }

sqlx-sqlhelper=  {version="*" ,path="./sqlx-sqlhelper"}
codegen="*"
config ="*"
base64 = "0.21.0"
bytes = "1.1.0"
env_logger = "0.9.0"
form_urlencoded = "1.0.1"
futures = "0.3.21"
http = "0.2.6"
json = "0.12.4"
lazy_static = "1.4.0"
md5 = "0.7.0"
percent-encoding = "2.1.0"
serde = "1.0"
serde_derive = "1.0.136"
serde_yaml = "0.8"
serde_json = "1.0.79"
serde-xml-rs = "0.5.1"
url = "2.2.2"
yaml-rust = "0.4.5"
rbson = "2.0"
log = "0.4"
rand = "0.8.5"
fast_log = "1.3"
substring = "1.4.0"
change-case = "0.2.0"
 
async-std = "1.7.0"
sqlx = {version="0.5.13", features = ["mysql", "postgres", "runtime-tokio-rustls"] }
rbs = { version = "0.1"}
# rbdc-sqlite = { version = "0.1" }
rbdc = "*"
rbdc-mysql={version="0.1"}
rbatis = {version = "4"}

redis = {version = "0.21.0", features = ["tokio-comp", "connection-manager"]}

regex="*"
[profile.release]
lto = true
opt-level = 3
codegen-units = 1